file rename and navbar responsive

--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
         </div>
         <div class="links">
-            <a href="signup.html">
+            <a href="index.html">
                 <p>signup</p>
             </a>
             <a href="profile.html">
@@ -26,6 +26,7 @@
             <a href="jobs.html">
                 <p>jobs</p>
             </a>
+            
           
         </div>
     </div>
