close button functionality change

--- a/profile.html
+++ b/profile.html
@@ -70,7 +70,7 @@
     <input type="text" name="" id="imgurl">
    </div>
    <div class="btndiv">
-    <button id="close" class="btn btn-outline-primary">close</button>
+    <button id="closebtn" class="btn btn-outline-primary">close</button>
     <button id="submit" class="btn btn-primary">submit</button>
    </div>
 
